<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">
        <TextView
            android:id="@+id/character_level_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/character_level_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        <TextView
            android:id="@+id/character_level_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/character_level_text"
            android:text="@string/character_level_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>


        <TextView
            android:id="@+id/character_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/character_level_lbl"
            android:layout_alignParentStart="true"
            android:text="@string/character_name_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/character_str_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_name"
            android:text="@string/character_str_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_str_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_name"
            android:layout_toEndOf="@id/character_str_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_str_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/character_const_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_str_lbl"
            android:text="@string/character_const_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_const_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_str_lbl"
            android:layout_toEndOf="@id/character_const_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_const_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/character_dex_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_const_lbl"
            android:text="@string/character_dex_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_dex_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_const_lbl"
            android:layout_toEndOf="@id/character_dex_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_str_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/character_int_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_dex_lbl"
            android:text="@string/character_int_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_int_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_dex_lbl"
            android:layout_toEndOf="@id/character_int_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_str_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/character_wis_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_int_lbl"
            android:text="@string/character_wis_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_wis_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_int_lbl"
            android:layout_toEndOf="@id/character_wis_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_str_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
        <TextView
            android:id="@+id/character_char_lbl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_wis_lbl"
            android:text="@string/character_char_lbl"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

        <TextView
            android:id="@+id/character_char_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/character_wis_lbl"
            android:layout_toEndOf="@id/character_char_lbl"
            android:layout_marginTop="0dp"
            android:text="@string/character_str_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>



    </RelativeLayout>
</androidx.cardview.widget.CardView>